overflow-x fix

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   max-width: 1280px;
   margin: 0 auto;
   background-color: var(--color-creamson);
+  overflow-x: hidden;
 }
 
 a {
